@@ -6,17 +6,17 @@
 
 from __future__ import division, print_function, absolute_import
 import os
+import sys
+import sysconfig
 
 from distutils.sysconfig import customize_compiler
 import distutils.command.build_ext
 from distutils.dep_util import newer, newer_group
 
-import sipconfig
 import PyQt5.QtCore
 
 ##################################################################
 # try to get various useful things we need in order to build
-# this is likely to break, I'm sure
 
 QT_LIB_DIR = PyQt5.QtCore.QLibraryInfo.location(
     PyQt5.QtCore.QLibraryInfo.LibrariesPath)
@@ -27,35 +27,54 @@ QT_IS_FRAMEWORK = os.path.exists(
 
 SIP_FLAGS = PyQt5.QtCore.PYQT_CONFIGURATION['sip_flags']
 
-PYQT_SIP_DIR = os.path.join(
-    sipconfig.Configuration().default_sip_dir, 'PyQt5')
-
-SIP_BIN = sipconfig.Configuration().sip_bin
-SIP_INC_DIR = sipconfig.Configuration().sip_inc_dir
-
 ##################################################################
+
+def findSipOnPath():
+    '''Get SIP executable from PATH.'''
+    path = os.getenv('PATH', os.path.defpath)
+    pathparts = path.split(os.path.pathsep)
+    for cmd in 'sip', 'sip5', 'sip.exe', 'sip5.exe':
+        for dirname in pathparts:
+            cmdtry = os.path.join(dirname.strip('"'), cmd)
+            if os.path.isfile(cmdtry) and os.access(cmdtry, os.X_OK):
+                return cmdtry
+    raise RuntimeError('Could not find SIP executable')
 
 def replace_suffix(path, new_suffix):
     return os.path.splitext(path)[0] + new_suffix
 
-class build_ext (distutils.command.build_ext.build_ext):
+class build_ext(distutils.command.build_ext.build_ext):
 
     description = ('Compile SIP descriptions, then build C/C++ extensions '
                    '(compile/link to build directory)')
+
+    user_options = distutils.command.build_ext.build_ext.user_options + [
+        ('sip-exe=', None,
+         'override sip executable'),
+        ('sip-dir=', None,
+         'override sip file directory'),
+        ('sip-include-dir=', None,
+         'override sip include directory'),
+        ]
+
+    def initialize_options(self):
+        distutils.command.build_ext.build_ext.initialize_options(self)
+        self.sip_exe = None
+        self.sip_dir = None
+        self.sip_include_dir = None
 
     def _get_sip_output_list(self, sbf):
         '''
         Parse the sbf file specified to extract the name of the generated source
         files. Make them absolute assuming they reside in the temp directory.
         '''
-        for L in open(sbf):
-            key, value = L.split('=', 1)
+        for line in open(sbf):
+            key, value = line.split('=', 1)
             if key.strip() == 'sources':
                 out = []
                 for o in value.split():
                     out.append(os.path.join(self.build_temp, o))
                 return out
-
         raise RuntimeError('cannot parse SIP-generated "%s"' % sbf)
 
     def get_cpp_includes(self):
@@ -74,11 +93,20 @@ class build_ext (distutils.command.build_ext.build_ext):
         if not self.extensions:
             return
 
+        build_cmd = self.get_finalized_command('build_ext')
+
+        sip_exe = build_cmd.sip_exe or findSipOnPath()
+        sip_inc_dir = build_cmd.sip_include_dir or sysconfig.get_path('include')
+
+        # python data directory
+        data_dir = sys.prefix if sys.platform=='win32' else sys.prefix+'/share'
+        sip_dir = build_cmd.sip_dir or os.path.join(data_dir, 'sip')
+
         # add directory of input files as include path
         indirs = list(set([os.path.dirname(x) for x in sources]))
 
         # Add the SIP and Qt include directories to the include path
-        extension.include_dirs += [SIP_INC_DIR] + indirs
+        extension.include_dirs += [sip_inc_dir] + indirs
 
         # link against libraries
         if extension.language == 'c++':
@@ -132,17 +160,17 @@ class build_ext (distutils.command.build_ext.build_ext):
             sbf = os.path.join(self.build_temp,
                                replace_suffix(sipbasename, '.sbf'))
             if newer_group([sip]+depends, sbf) or self.force:
-                self._sip_compile(sip, sbf)
+                self._sip_compile(sip_exe, sip_dir, sip, sbf)
             out = self._get_sip_output_list(sbf)
             generated_sources.extend(out)
 
         return generated_sources + other_sources
 
-    def _sip_compile(self, source, sbf):
-        self.spawn([SIP_BIN,
+    def _sip_compile(self, sip_exe, sip_dir, source, sbf):
+        self.spawn([sip_exe,
                     '-c', self.build_temp,
                     ] + SIP_FLAGS.split() + [
-                    '-I', PYQT_SIP_DIR,
+                    '-I', os.path.join(sip_dir, 'PyQt5'),
                     '-b', sbf,
                     source])
 
